# theReviewMan

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/diagrams/: architecture.mmd
src/reviewman/: __init__.py  config.py  main.py
src/reviewman/agent/: __init__.py  graph.py  state.py
src/reviewman/agent/nodes/: __init__.py
src/reviewman/github/: __init__.py  client.py
src/reviewman/models/: __init__.py  review.py
src/reviewman/prompts/: __init__.py
tests/: test_models.py
