[project]
name = "reviewman"
version = "0.0.1"
description = "An AI code-review agent that shows its work — structured findings, real verdicts, measured accuracy."
readme = "README.md"
license = "MIT"
authors = [{ name = "Vamsi Duppala" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "anthropic",
    "pygithub",
    "pydantic",
    "pydantic-settings",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewman"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
